Fix footer spacing

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -149,6 +149,7 @@ content {
 footer {
   position: relative;
   left: 20px;
+  align-self: flex-start;
 }
 
 /* Footer */
